2010-07-08  Alan McGovern  <amcgovern@novell.com>

	* dependencyobject.cpp: Make sure FrameworkElements aren't
	  marked as being their own mentor by never checking the
	  'this' element when setting the mentor.

2010-07-07  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for Seadragon-InvalidXml

	* deepzoomimagetilesource.cpp (start_element): Validate all
	element attribute values and make sure all expected attributes
	were present. Set the error flag if anything goes wrong.
	(DownloaderComplete): If the error flag is set, raise the
	DownloaderFailed handler.

	* utils.cpp ([U]Int32TryParse): New functions to make parsing
	integers easier.

2010-07-07  Jeffrey Stedfast  <fejj@novell.com>

	Crash fixes for drt Seadragon-InvalidXml

	* deepzoomimagetilesource.cpp (EndElement): Don't even try
	creating a SubImage if the uri is NULL.

	* multiscalesubimage.cpp (MultiScaleSubImage): No-op if the source
	uri is NULL (don't crash!).

	* multiscaleimage.cpp (RenderSingle): Do sanity checks on x and y
	to make sure they are smaller than 2^layer in the loop conditional
	rather than in qtree_lookup_image() so as to avoid looping over
	invalid ranges.
	(RenderCollection): Same.

2010-07-07  Larry Ewing  <lewing@novell.com>

	* transform.h:
	* transform.cpp (UpdateTransform): implement CompositeTransform.

2010-07-06  Alan McGovern  <amcgovern@novell.com>

	* textoptions.h: Add a missing default value.

2010-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/im-gtk.cpp: Add debug spew to try to figure out a crash that only
	happens on the bots and only once in a while.

2010-07-05  David Reveman  <davidr@novell.com>

	* effect.h:
	* effect.cpp: Update mesa revision.

2010-07-02  Jeffrey Stedfast  <fejj@novell.com>

	* runtime.cpp (GALLIUM_RUNTIME_INIT): If USE_GALLIUM is undefined,
	we need to define GALLIUM_RUNTIME_INIT so that it expnds to
	something that can be bitwise-or'd.

	* fontmanager.cpp (FontResource): New class to wrap a